--- a/app/header/admin/admin.component.html
+++ b/app/header/admin/admin.component.html
@@ -16,8 +16,8 @@
             <option value="Inactive">Inactive</option>
         </select>
         <br>
-        <button class="admin-button">CREAT</button>
+        <button class="admin-button" (click)="CreateNewUser()">CREATE</button>
     </div>
     <app-user-list></app-user-list>
-    <app-user-detail></app-user-detail>
+   
 </div>
